--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
 		"source": "https://github.com/thiagodp/datatables"
 	},
 	"require": {
-		"php": ">=5.2.0"
+		"php": ">=5.4",
+		"phputil/traits": "^1.3"
 	},
 	"require-dev": {
-	},
+        "phpunit/phpunit": "=4.4.2"
+    },	
 	"suggest": {
 	},
 	"autoload": {
-		"psr-4": { "phputil\\": "lib/" }
+		"psr-4": { "phputil\\datatables\\": "lib/" }
 	}
 }
